[ACS-6211] Resolved UI alignment issue in create rule dialog (#3505)
* [ACS-6211] Resolved UI alignment issue in create rule dialog

* [ACS-6211] Changed appearance of mat-select form field to standard to match with other action form fields

* [ACS-6211] Fixed unit tests

* [ACS-6138] Updating ADW Styling after ACA changes for angular material - Expansion panel items

* [ACS-6211] Fixed failing E2E

--- a/projects/aca-content/folder-rules/src/rule-details/actions/rule-action.ui-component.scss
+++ b/projects/aca-content/folder-rules/src/rule-details/actions/rule-action.ui-component.scss
@@ -11,6 +11,6 @@
   }
 
   &-full-width {
-    width: 100%;
+    flex: 1;
   }
 }
